--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ nav .fas {
 }
 
 /*  media query for medium devices*/
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 1100px) {
   .courses_row {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -545,7 +545,7 @@ nav .fas {
   width: 60%;
   margin: 0 auto;
   background-color: #f3f4f8;
-  padding:15px 30px;
+  padding: 15px 30px;
   overflow: hidden;
 }
 .review_info p {
@@ -559,4 +559,156 @@ nav .fas {
 }
 .review_img {
   float: right;
+}
+
+/**************************************contact page  */
+
+.contact_header {
+  height: 50vh;
+  width: 100%;
+  background-image: url("https://rn53themes.net/themes/demo/education-master/images/slider/2.jpg");
+  opacity: 0.8;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  color: #f3f0f0;
+}
+.contact_header h1 {
+  margin-top: 150px;
+  color: aliceblue;
+  font-size: 36px;
+}
+
+.contact {
+  position: relative;
+
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contact .content {
+  max-width: 800px;
+  text-align: center;
+}
+.contact .content h2 {
+  font-size: 36px;
+  color: #f36b3b;
+}
+.contact .content p {
+  font-size: 16px;
+  color: #192e49;
+}
+.contaner {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.contact_info {
+  width: 50%;
+  display: flex;
+
+  flex-direction: column;
+}
+.contact_info .contact_links {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+.icons .fas {
+  min-height: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #192e49;
+  font-size: 30px;
+}
+.contact_links .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+
+  flex-direction: column;
+}
+.text h3 {
+  font-size: 25px;
+  color: #902c07;
+}
+.text p {
+  font-size: 20px;
+  color: #192e49;
+}
+.contact_form {
+  width: 40%;
+  padding: 40px;
+  background: #f3f0f0;
+}
+.contact_form h1 {
+  font-size: 25px;
+  padding-bottom: 10px;
+  color: #192e49;
+}
+.input_box {
+  position: relative;
+  width: 100%;
+}
+.input_box input,
+textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #192e49;
+  outline: none;
+  resize: none;
+  background: #f3f0f0;
+}
+.input_box span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #192e49;
+}
+.input_box input:focus ~ span,
+.input_box input:valid ~ span,
+.input_box textarea:focus ~ span,
+.input_box textarea:valid ~ span {
+  color: #902c07;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+.input_box input[type="submit"] {
+  width: 100px;
+  background: #ca4d1f;
+  color: #192e49;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+@media only screen and (max-width:991px){
+  .contact{
+    padding: 50px;
+  }
+  .contaner{
+    flex-direction: column;
+  }
+  .contact_info{
+    margin-bottom: 50px;
+    width: 100%;
+  }
+  .contact_form{
+    width: 100%;
+  }
 }
