--- a/style.css
+++ b/style.css
@@ -507,7 +507,72 @@ nav .fas {
   color: aliceblue;
   font-size: 36px;
 }
+.popular_cards {
+  margin: 0 auto;
+  width: 80%;
+  padding-top: 70px;
+}
+.card {
+  position: relative;
+  width: 350px;
 
+  height: 190px;
+  border-radius: 20px;
+  box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+  transition: 0.5s;
+}
+.card_img {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  left: 50%;
+  top: -50px;
+  transform: translateX(-50%);
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.35);
+  overflow: hidden;
+  transition: 0.5s;
+}
+.card:hover {
+  height: 450px;
+}
+.card_img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card:hover .card_img {
+  width: 250px;
+  height: 250px;
+}
+.card .card_info {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  overflow: hidden;
+}
+.card_info .details {
+  padding: 40px;
+  text-align: center;
+  width: 100%;
+  transition: 0.5s;
+  transform: translateY(150px);
+}
+.card_info .details h1 {
+  font-size: 1.25rem;
+  color: #902c07;
+  line-height: 1.2rem;
+}
+.card:hover .card_info .details {
+  transform: translateY(0px);
+}
 /* *******************blog page */
 .blog_header {
   height: 50vh;
